# Nider

./: .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  Calibracion.cpp  Deteccion.cpp  Detector.cpp  LICENCE.md  Main.cpp  Nider.cpp  README.md  Seguimiento.cpp  Sistema.cpp  Utilidades.cpp
clasificacion/: clasificar_manual.py  clasificar_tensorflow.py  clasificar_tensorflow_unica.py  entrenar_test.py  generar_data.py  manual.py  transformar_training_data_gris.py  windows.py
clasificacion/inception/: labels.txt
clasificacion/keras/: clasificar.py  keras_basic.py  manual.old.py  modelo.json  modelo.py  modelo_basic.py
deteccion/: Calibracion.cpp  ClienteSocket.cpp  Deteccion.cpp  Main.cpp  Sistema.cpp  Utilidades.cpp  corregir_camaras.py  nider_server.py
deteccion/include/: ClienteSocket.hpp  Deteccion.hpp  Seguimiento.hpp  Sistema.hpp
deteccion/include/libsocket/: Makefile
include/: Calibracion.hpp  Deteccion.hpp  Nider.hpp  Seguimiento.hpp  Sistema.hpp  Utilidades.hpp
