cmake_minimum_required(VERSION 3.5.1)
project(nider)
FIND_PACKAGE(PkgConfig REQUIRED)
pkg_check_modules(OpenCV REQUIRED opencv)
add_definitions(-DNIDER_VERSION_MAYOR=0)
add_definitions(-DNIDER_VERSION_MENOR=3)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(WITH_CUDA "WITH_CUDA" OFF)
if(WITH_CUDA)
  message("-- COMPILAR CON CUDA = ON")
  add_definitions(-DCOMPILAR_CON_CUDA)
else()
  message("-- COMPILAR CON CUDA = OFF")
endif()
include_directories("/usr/local/include" "include")
link_directories("/usr/local/lib" "/usr/local/share/OpenCV/3rdparty/lib")
add_executable(nider Main.cpp Deteccion.cpp Calibracion.cpp Utilidades.cpp Seguimiento.cpp Sistema.cpp)
target_link_libraries(nider ${OpenCV_LIBRARIES})
